# iota

./: .gitignore  .gitmodules  addresses.c  addresses.h  bigint.c  bigint.h  conversion.c  conversion.h  iota_types.h  kerl.c  kerl.h  transaction.c  transaction.h
tests/: CMakeLists.txt  README.md  address_generation_test.c  bigint_test.c  conversion_test.c  kerl_multitrytes_and_hashes_test.c  kerl_test.c  kerl_trytes_and_hashes_test.c  kerl_trytes_and_multi_squeeze_test.c  transaction_test.c
